<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transGreen" >

    <Button
        android:id="@+id/statsButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newGameButton"
        android:layout_centerHorizontal="true"
        android:text="@string/myStats" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/statsButton"
        android:layout_alignParentTop="true"
        android:text="@string/newGame" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/imageDescription"
        android:src="@drawable/celtic_manor" />

</RelativeLayout>