<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transGreen" >

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/password"
        android:layout_marginTop="58dp"
        android:background="@color/transWhite"
        android:ems="10"
        android:hint="@string/usernameHint"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/emailBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_alignRight="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="18dp"
        android:background="@color/transWhite"
        android:hint="@string/emailHint"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@color/transWhite"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/passwordTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="18dp"
        android:background="@color/transWhite"
        android:ems="10"
        android:hint="@string/passwordRetype"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTwo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="@color/titleGreen"
        android:text="@string/submit" />

</RelativeLayout>