<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transGreen" >

    <EditText
        android:id="@+id/username"
        android:hint="@string/emailHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/transWhite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:hint="@string/passwordHint"
        android:layout_height="wrap_content"
        android:background="@color/transWhite"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/titleGreen"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:layout_marginTop="20dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/notamember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submitButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:onClick="goToRegister"
        android:text="@string/notamember"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

</RelativeLayout>
